Micro tab: In the periodic table, use green instead of yellow highlighting because yellow doesn't show up well against pink
Micro tab: In the periodic table, use color squares that are the same size as the element squares
Micro tab: Created a bar chart bar for sucrose
# 0.00.68 (54426) Jul 22, 2011
Micro tab: Added a legend for the periodic table
Micro tab: Added pink background for nonmetals
Micro tab: Moved "next" and "previous" buttons next to the title and made yellow triangles like in Build a Molecule
# 0.00.67 (54416) Jul 22, 2011
Micro tab: Fixed: Ratio for CaCl2 was incorrect
Micro tab: Added units to beaker tick mark labels
Micro tab: Use a smaller font for beaker tick marks
Micro tab: Switched to arrow buttons for traversing through kits
Micro tab: Added "Solute" title to kit selection box
Micro tab: Moved the kit "previous" and "next" buttons below the kit to save horizontal space
# 0.00.66 (54407) Jul 21, 2011
Micro tab: Fixed: Beaker tick labels go offscreen
Micro tab: Fixed: Pause/playback should reset on "Reset All"
Micro tab: Fixed: Sugar molecules come out at the center of the sugar dispenser instead of the end
Micro tab: Fixed: Salts come out at the center of the shaker instead of the end
Micro tab: Added a button to the ethanol dropper
Micro tab: Fixed: particles get stuck in the floor
Micro tab: Ethanol molecules appear at different angles
Micro tab: Added ethanol atomic structure
Micro tab: Made ethanol particles come out of the tip of the dropper instead of its center
Micro tab: Added ethanol particles
Micro tab: Added an image for the ethanol dropper
Micro tab: Added molecular formulae for all molecules in kits 2-4
Micro tab: When changing kits, switch to a new dispenser (unless dispenser exists in new kit)
Micro tab: When the user switches kits, clear the solutes
Micro tab: Kit resets on "reset all"
Micro tab: Fixed: Kits extend into the border of the kit control panel
Micro tab: Added kits for different solutes